src/components/footer/footer.scss
@import '../../styles/styles.scss';

// Footer
$footerNavHoverColor: $appstem-green;
$footer-heading-color: $white;

.footer {
    width: 100vw;
    background-color: #1E1E1E;
    margin-top: -7.2%;

    .footer-grid {
        position: relative;
        width: 100%;
        
        @media (min-width: 768px) {
            display: flex;
            justify-content: space-between;
            max-width: 1200px;
            padding: 10em 0 5em 0;
            margin: 0 auto;
        }
        @include phone {
            display: block;
            padding: 7em 0 0 0;
        }

        .footer-contact-info {
            display: flex;
            
            @media (min-width: 768px) {
                justify-content: space-between;
                width: 62.5%;
            }
            @include phone {
                flex-direction: column-reverse;

            }
            
            .footer-address-block-wrapper {
                font-family: $primary-font-family;
                width: 7em;
                text-align: left;

                @include phone {
                    margin-top: 41px;
                    text-align: center;
                    width: 100%;
                }

                .footer-address-block {
                    margin-bottom: 1em;
                    @include phone {
                        margin-bottom: 36px;
                    }

                    & > a {
                        color: $white;
                        opacity: 0.7;
                        font-size: 0.8125rem;
                        line-height: 19px;
                        text-decoration: none;

                        &:hover {
                            color: $footerNavHoverColor;
                        }
                        
                        & > address {
                            font-style: normal;
                            opacity: 0.7;
                        }
                    }
                }

                h4.footer-heading {
                    color: $footer-heading-color;
                    font-family: $primary-font-family;
                    font-size: 0.8125rem;
                    font-weight: normal;
                    line-height: 19px;
                    opacity: 1;
                    margin: 0;
                }
                h4.footer-heading:first-of-type {
                    letter-spacing: 3.25px;
                    line-height: 24px;
                }
                
            }
            
            .footer-email-form-wrapper {
                // grid-area: form;
                position: relative;
                // margin-right: 5em;
                // height: 65px;
                text-align: left;
                
                @include phone {
                    margin: 0 auto;
                    width: 73.33%;
                }
                @include tablet {
                    margin: 0 auto;
                }

                .footer-form-heading {
                    color: #FFFFFF;
                    font-size: 0.8125rem;
                    font-weight: normal;
                    letter-spacing: 3.25px;
                    line-height: 24px;
                    margin-bottom: 15px;

                    @include phone {
                        font-size: 0.8125rem;
                        font-weight: normal;
                        letter-spacing: 3.25px;
                        line-height: 24px;
                        text-align: center;
                        margin-bottom: 16px;
                    }
                }
                .social-icons-wrapper {
                    // grid-area: form;
                    position: relative;

                    @include phone {
                        // grid-area: social;
                    }
                }
            }
        }
    }
}

